--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,11 +69,13 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 1rem;
+    font-weight: 700;
 }
 
 .navbar__logo a {
     display: flex;
     align-items: center;
+    font-weight: 700;
 }
 
 .nav_logo-icon {
@@ -83,8 +85,6 @@ body {
 
 .navbar__logo span {
     color: var(--title-color);
-    font-weight: 500;
-
 }
 
 .navbar__menu {
@@ -109,7 +109,7 @@ body {
     color: var(--title-color);
     display: flex;
     gap: 0.5rem;
-    font-size: 21px;
+    font-size: 22px;
     cursor: pointer;
     position: relative;
 }
@@ -237,10 +237,19 @@ body {
 }
 
 .cart__total--info {
-    background-color: red;
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+
+.total__item {
+    color: var(--text-color);
+    font-size: 13px;
+}
+
+.total__buy {
+    color: var(--text-color);
+    font-weight: 700;
 }
 
 .btn__buy {
