--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,8 @@
     --border-color: hsl(0, 0%, 94%);
     --shadow-general: 0 .5rem 1rem rgba(0, 0, 0, .15);
     --h-header: 3rem;
+    --zi-header: 1;
+    --zi-cart: 3
 }
 
 * {
@@ -57,7 +59,7 @@ body {
     padding: 0 1rem;
     position: fixed;
     width: 100%;
-    z-index: 1;
+    z-index: var(--zi-header);
     transition: background-color 0.5s, height 0.5s, box-shadow 0.5s;
 }
 
@@ -113,9 +115,11 @@ body {
 }
 
 .navbar__menu li {
+    display: flex;
+    align-items: center;
     font-size: 25px;
     font-weight: 400;
-    
+    color: var(--title-color);
 }
 
 /* .navbar__menu li:nth-child(1):active {
@@ -154,7 +158,7 @@ body {
     position: fixed;
     top: 0;
     right: -100%;
-    z-index: 3;
+    z-index: var(--zi-cart);
     display: grid;
     grid-template-rows: 75% 25%;
     padding: 2rem 1rem 1rem;
@@ -411,11 +415,6 @@ body {
 }
 
 
-
-
-
-
-
 /**/
 
 
@@ -482,4 +481,36 @@ body {
 
 .bxl-netlify {
     cursor: pointer;
+}
+
+@media (min-width: 700px) {
+
+    .navbar__menu {
+        position: static;
+        background-color: transparent;
+        width: 100%;
+        height: auto;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 1rem;
+        padding-left: 2rem;
+    }
+
+    .navbar__menu a {
+        font-size: 16px;
+        font-weight: bold;
+    }
+
+    .home__content {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        padding-top: 1rem;
+    }
+
+    .home__body h2 {
+        font-size: 50px;
+    }
+
+
 }
