--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -37,6 +37,7 @@ img {
 }
 
 html {
+    background-color: var(--body-color);
     scroll-behavior: smooth;
 }
 
@@ -47,10 +48,6 @@ html ::-webkit-scrollbar {
 html ::-webkit-scrollbar-thumb {
     background-color: var(--first-color);
     border-radius: 20px;
-}
-
-body {
-    background-color: var(--body-color);
 }
 
 .header__container {
@@ -246,7 +243,7 @@ body {
     color: var(--first-color);
 }
 
-.card__total {
+.cart__total {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -366,7 +363,7 @@ body {
 .product__data {
     background-color: var(--container-color);
     color: var(--title-color);
-    padding: 2rem;
+    padding: 1.5rem;
     border-radius: 0 0 1rem 1rem;
     position: relative;
 }
@@ -489,7 +486,7 @@ body {
         position: static;
         background-color: transparent;
         width: 100%;
-        height: auto;
+        height: 100%;
         flex-direction: row;
         justify-content: flex-start;
         gap: 1rem;
@@ -501,16 +498,58 @@ body {
         font-weight: bold;
     }
 
+    .cart {
+        width: 450px;
+    }
+
+    .main__container {
+        gap: 3rem;
+    }
+
     .home__content {
         display: flex;
         flex-direction: row-reverse;
         justify-content: center;
-        padding-top: 1rem;
+        height: 80vh;
+    }
+
+    .home__body {
+        justify-content: center;
     }
 
     .home__body h2 {
         font-size: 50px;
     }
 
+    .footer__content {
+        margin-top: 4rem;
+        flex-direction: row;
+        justify-content: space-evenly;
+        padding: 5rem 4rem 3rem 3rem;
+    }
+
+    .footer__content div:nth-child(4) {
+        align-self: center;
+    }
+
+    .footer__content ul {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .data__dev ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        height: 95px;
+        width: 90%
+    }
+
+    .data__dev li,
+    .data__dev a {
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
 
 }
