--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,22 +93,25 @@ html ::-webkit-scrollbar-thumb {
 }
 
 .navbar__menu {
-    background-color: var(--container-color);
+    background-color: var(--body-color);
     position: fixed;
     top: 0;
-    left: 100%;
-    width: 100%;
-    height: 100vh;
+    right: 0;
+    width: 40%;
+    height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 0.3rem;
-    transition: left 0.5s;
+    gap: 0.5rem;
+    padding-top: 20px;
+    transition: right 0.5s;
+    border-bottom-left-radius: 1rem;
 }
 
 .menu__show {
-    left: 0;
+    right: -100%;
+    transition: right 0.5s;
 }
 
 .navbar__menu li {
@@ -366,6 +369,7 @@ html ::-webkit-scrollbar-thumb {
     padding: 1.5rem;
     border-radius: 0 0 1rem 1rem;
     position: relative;
+    height: 110px;
 }
 
 .product__data span {
