--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -571,6 +571,7 @@ body.dark__mode {
     .home__body {
         justify-content: center;
         min-height: 500px;
+        padding: 0 2rem;
     }
 
     .home__body h2 {
