--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -411,6 +411,10 @@ body.dark__mode {
     padding: 1rem;
 }
 
+.products img{
+    transition-duration: 0.5s;
+}
+
 .products img:hover{
     transform: translateY(-10px);
     transition-duration: 0.5s;
